shawk/awk/rdpg/src/compiler/tests/accept/fatal_err/fatal_parse_1.txt
rdpg-comp.awk: error: file data/fatal_err/fatal_parse.rdpg, line 1, pos 11: unexpected 'terminal' after ':'
start : FOO EOI ;
          ^
expected: 'non-terminal' 

rdpg-comp.awk: exiting due to FatalErr
